	- display caught signals to diagnose #134474 (gonna be SIGPIPE).
	- display N-V-R.A in dependency failure messages.
	- selinux: set "rpm_script_t" always, not just for /bin/sh.
	- honor inherited SIG_IGN when establishing rpmdb signal exit (#134474).
	- python: remove ".A" from creaky ts.check() tuple return (#135008).
	- fix: don't set handler if SIG_IGN is already set (#134474).

4.3 -> 4.3.1:
	- fix: don't add leading space to %* argv expansion (#119059).
	- scareMem = 0 everywhere, document deprecation phase out.
	- fix: add u+w to FIXPERMS.
	- add buildtime to rpmds, methods to retrieve.
	- python: hide labelCompare() underneath ds.cmp(a,b).
	- fix: segfault on --recontext if file_contexts unreadable (#117374).
	- fix: /etc/security/selinux/file_contexts is default path.
	- fix: no transaction lock if --test was specified (#119783).
	- perl: skip new-fangled head[34] while generating deps (#118243).
	- perl: use __perl for perl variable macros (#115156).
	- make peace with libtool-1.5.6.
	- fix: follow current is_selinux_enabled() return (#121004).
	- fix: exit fail when erasing multiple identical packages (#120519).
	- add aurora/sparc patches (#124469).
	- use poll(2) if available, avoid borked aurora/sparc select (#124574).

4.2.3 -> 4.3:
	- upgrade to zlib-1.2.beta7.
	- fix: short option help missing string terminator.
	- permit secondary tag match patterns with RPMQV_ALL.
	- fix: cut-n-paste error setting nopromote for Conflicts: (#81965).
	- don't use error string after gzclose (Dmitry V. Levin).
	- only internal Berkeley db from now on.
	- revive "make dist".
	- fix: added index size wrong iff _transaction_color != 0/3 (#103865).
	- fix: escape '+' in regex patterns through RPMMIRE_DEFAULT (#103851).
	- RPMMIRE_DEFAULT is overkill, use RPMMIRE_STRCMP instead (#103851).
	- don't use mktemp if mkstemp is available (#103850).
	- python: return None for NEVRAO, [] for everything else.
	- python: throw exception on bad arg to labelCompare (#113661).