@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 13
+Release: 14
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -494,6 +494,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sun Oct 17 2004 Jeff Johnson <jbj@jbj.org> 4.3.2-14
+- don't add time stamp to compressed man pages (#132526).
+
 * Fri Oct 15 2004 Jeff Johnson <jbj@redhat.com> 4.3.2-13
 - fix: don't set handler if SIG_IGN is already set (#134474).
 
