@@ -8,7 +8,7 @@ fi
 cd $RPM_BUILD_ROOT
 
 # Compress man pages
-COMPRESS="gzip -9"
+COMPRESS="gzip -9 -n"
 COMPRESS_EXT=.gz
 
 for d in ./usr/man/man* ./usr/man/*/man* ./usr/info \
