@@ -29,6 +29,7 @@
 	- honor inherited SIG_IGN when establishing rpmdb signal exit (#134474).
 	- python: remove ".A" from creaky ts.check() tuple return (#135008).
 	- fix: don't set handler if SIG_IGN is already set (#134474).
+	- don't add time stamp to compressed man pages (#132526).
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
